--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Narek Boghosian",
+  "name": "Narek Boghosian's Portfolio Page",
   "icons":[
     {
       "src": "favicon.ico",
