--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "test-portfolio-app",
   "version": "0.1.0",
-  "homepage": "https://narekb8.github.io/react-gh-pages",
+  "homepage": "https://narekb8.github.io/",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.14.0",
