More package tweaks

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "test-portfolio-app",
   "version": "0.1.0",
-  "homepage": "https://narekb8.github.io/",
+  "homepage": "https://myusername.github.io",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -19,7 +19,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -b main -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
